@@ -3,6 +3,10 @@ Revision history for libev, a high-performance and full-featured event loop.
 	- added linux eventfd support.
         - try to autodetect epoll and inotify support
           by libc header version if not using autoconf.
+        - new symbols: EV_DEFAULT_UC and EV_DEFAULT_UC_.
+        - declare functions defined in ev.h as inline if
+          C99 or gcc are available.
+        - enable inlining with gcc versions 2 and 3.
 
 3.2  Wed Apr  2 17:11:19 CEST 2008
 	- fix a 64 bit overflow issue in the select backend,
